<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/imgLocal"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_below="@+id/textNome"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:contentDescription="@string/img_descrip"
        android:gravity="center"
        android:src="@drawable/semimagem" />

    <TextView
        android:id="@+id/textNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/text_info"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/nome_do_local"
        android:textColor="@color/textoNormal"
        android:textSize="28sp" />

    <ProgressBar
        android:id="@+id/barraProgresso"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />


    <TextView
        android:id="@+id/textoProgreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barraProgresso"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="0%"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textoProgresoNotificacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/barraProgresso"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:text="@string/notificacao_progresso"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLocal"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textoDistancia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Distancia:"
                android:gravity="right"
                android:layout_margin="5dp"
                android:textColor="@color/textoNormal"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/distanciaI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:layout_margin="5dp"
                android:textColor="@color/textoNormal"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textoDificuldade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Dificuldade:"
                android:gravity="right"
                android:layout_margin="5dp"
                android:textColor="@color/textoNormal"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/dificuldadeI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:layout_margin="5dp"
                android:textColor="@color/textoNormal"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textoCaminhada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="Caminhada:"
                android:textColor="@color/textoNormal"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/caminhadaI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="@color/textoNormal"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textoGuia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="Guia:"
                android:textColor="@color/textoNormal"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/guiaI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="@color/textoNormal"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textoCarro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="4x4:"
                android:gravity="right"
                android:layout_margin="5dp"
                android:textColor="@color/textoNormal"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/carroI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:layout_margin="5dp"
                android:textColor="@color/textoNormal"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonAdicionarFoto"
                android:background="@color/colorButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/buttomAdicionarLocal"
                android:textColor="@color/textoNormal" />

            <Button
                android:id="@+id/buttonEncontrar"
                android:background="@color/colorButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/buttonMapa"
                android:textColor="@color/textoNormal" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>